Add user_passwords.txt to .gitignore and update templates with Persian date conversion

--- a/accounting/templates/sanad_list.html
+++ b/accounting/templates/sanad_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load persian_filters %}
 
 {% block title %}لیست اسناد{% endblock %}
 
@@ -231,7 +232,7 @@
                     -
                 {% endif %}
             </td>
-            <td>{{ sanad.tarikh|default:'' }}</td>
+            <td>{{ sanad.tarikh|to_jalali|default:'' }}</td>
             <td>{{ sanad.zamaem|default:'' }}</td>
             <td>{{ sanad.sharh|default:'' }}</td>
             <td>{{ sanad.status|default:'' }}</td>
