--- a/templates/home.html
+++ b/templates/home.html
@@ -280,7 +280,7 @@
             <div class="feature-description">
                 ایجاد فاکتور فروش جدید و ثبت عملیات فروش
             </div>
-            <a href="{% url 'create_sale_invoice' %}" class="btn btn-primary btn-feature">
+            <a href="{% url 'sale_invoice_create' %}" class="btn btn-primary btn-feature">
                 <i class="bi bi-arrow-left"></i>
                 صدور فاکتور
             </a>
